--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -12,10 +12,10 @@ $font-size-lg: 24px;
 
 // COLORS
 $colors:(
-	gray1: #F4F4F4,
+	gray1: #EAEAEA,
 	gray2: #DFDFDF,
-	gray3: #808080,
-	gray4: #747474,
+	gray3: #505050,
+	gray4: #454545,
 	white: #FFFFFF,
 );
 
